fix(material/datepicker): revert breaking change on IE (#23786)
Reverts #23057 which accidentally introduced a breaking change for IE on the patch branch by using a `class` binding on an SVG element which requires a polyfill.

--- a/src/material/datepicker/_datepicker-theme.scss
+++ b/src/material/datepicker/_datepicker-theme.scss
@@ -67,7 +67,7 @@ $calendar-weekday-table-font-size: 11px !default;
   $disabled-color: theming.get-color-from-palette($foreground, disabled-text);
 
   .mat-calendar-arrow {
-    fill: theming.get-color-from-palette($foreground, icon);
+    border-top-color: theming.get-color-from-palette($foreground, icon);
   }
 
   // The prev/next buttons need a bit more specificity to
