--- a/src/material/datepicker/calendar.scss
+++ b/src/material/datepicker/calendar.scss
@@ -1,5 +1,4 @@
 @use '../core/style/layout-common';
-@use '../../cdk/a11y';
 
 $calendar-padding: 8px !default;
 $calendar-header-divider-width: 1px !default;
@@ -52,8 +51,12 @@ $calendar-next-icon-transform: translateX(-2px) rotate(45deg);
 
 .mat-calendar-arrow {
   display: inline-block;
-  width: $calendar-arrow-size * 2;
-  height: $calendar-arrow-size;
+  width: 0;
+  height: 0;
+  border-left: $calendar-arrow-size solid transparent;
+  border-right: $calendar-arrow-size solid transparent;
+  border-top-width: $calendar-arrow-size;
+  border-top-style: solid;
   margin: 0 0 0 $calendar-arrow-size;
   vertical-align: middle;
 
@@ -63,11 +66,6 @@ $calendar-next-icon-transform: translateX(-2px) rotate(45deg);
 
   [dir='rtl'] & {
     margin: 0 $calendar-arrow-size 0 0;
-  }
-
-  @include a11y.high-contrast(active, off) {
-    // Setting the fill to `currentColor` doesn't work on Chromium browsers.
-    fill: CanvasText;
   }
 }
 
